# vttest-snapshots

./: BUGS  CHANGES  COPYING  MANIFEST  README  aclocal.m4  charsets.c  color.c  color.h  config.guess  config.hin  config.sub  configure  configure.in  descrip.mms  draw.c  draw.h  esc.c  esc.h  keyboard.c  main.c  makefile.in  mouse.c  nonvt100.c  nonvt100.h  patchlev.h  printer.c  replay.c  reports.c  reset.c  sargasso.h  setup.c  sixel.c  status.c  tek4014.c  ttymodes.c  ttymodes.h  unix_io.c  utf8.c  vms_io.c  (+11 more)
package/: vttest.spec
package/debian/: changelog  control  copyright  postinst  preinst  prerm  rules  watch
package/freebsd/: Makefile
package/pkgsrc/: Makefile  distinfo
