dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.16 2004/08/04 21:30:19 tom Exp $
AC_REVISION($Revision: 1.16 $)
AC_CONFIG_HEADER(config.h:config.hin)
AC_INIT(esc.c)
AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_PROGS(LINT, lint alint splint lclint, [])
AC_SUBST(LINT)

CF_DISABLE_ECHO
CF_WITH_WARNINGS

###	extra things that we'll substitute in the makefile
AC_TYPE_SIGNAL
AC_STDC_HEADERS
AC_HAVE_HEADERS( \
fcntl.h \
ioctl.h \
sgtty.h \
stdlib.h \
string.h \
sys/filio.h \
sys/ioctl.h \
termio.h \
termios.h \
unistd.h \
)

AC_HAVE_FUNCS( \
alarm \
rdchk \
tcgetattr \
usleep \
)

###	special configuration tests
CF_POSIX_VDISABLE
CF_FCNTL_VS_IOCTL

###	debugging/testing

###	output makefile and config.h
AC_OUTPUT(makefile)
